--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -76,6 +76,11 @@
 <!--            <artifactId>swagger-annotations</artifactId>-->
 <!--            <version>2.1.3</version>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>2.0.5</version>
+        </dependency>
     </dependencies>
 
     <build>
